raw-manifests/local-management/network-debug-app/local-2/service-entry-2.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: networking-debug-app-service-entry-2
  namespace: istio-system
spec:
  hosts:
    - "nda2.management.local"
  location: MESH_INTERNAL
  resolution: DNS
  ports:
    - name: http
      number: 8081 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTP
    - name: https
      number: 44301 # this is the istio ingress gateway port not the fucking app port 
      protocol: HTTPS
